2006-05-16  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* devhelp.keys.in:
	* devhelp.mime: Remove obsolete and unused mime/keys files.

	* src/dh-main.c: (main): Improve the option strings a bit.

	* ui/devhelp.glade:
	* src/dh-base.[ch:]
	* src/dh-search.[ch]:
	* src/dh-preferences.[ch]: Clean up a bit, and add a
	preference for showing/hiding the new search fields.

	* ui/Makefile.am: Dist the svg, fixes distcheck.

2006-05-15  Tristan Van Berkom <tvb@gnome.org>

	* configure.in: Bumping version to 0.12 in cvs.

2006-05-03  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c: Fixed the glitches when dragging the paned over
	  the book & page entries.

	* src/dh-preferences.c:
	  o Dont build dialog in dh_preferences_init();
	  o Build the dialog every time we show it and 
	    destroy it in the "close" handler.
	  o When recieving settings updates through gconf, 
	    check that the dialog currently exists before 
	    setting the button activity/sensitivity.
	  o Now only one code segment is responsable for updating the
	    gecko fonts, usually run in an idle handler.

2006-05-03  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c: Fix dh_search_set_search_string() to clear
	  the entries first.

	* ui/devhelp.glade: Set use_underline to TRUE for mnemonic
	  labels in the prefs dialog (since there was already a prefixed
	  underscore).

2006-04-28  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-parser.c: Now append book & page indexes into the
	  keyword list.

	* src/dh-keyword-model.c: Now return hits for page and book indexes
	  (much nicer search results over all)

	* src/dh-link.c: Patch possible segfaults on comparing NULL pointers

	* src/dh-search.c: Patched critical assertions in some searches
	  (i.e. gtk_entry_set_text called with NULL).

2006-04-28  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-main.c: Added --version option.

	* src/dh-link.[ch]: Added book & page specification
